--- a/leave-management/Views/LeaveTypes/Edit.cshtml
+++ b/leave-management/Views/LeaveTypes/Edit.cshtml
@@ -19,7 +19,7 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save Changes" class="btn btn-success" />
+                <input type="submit" value="Save Changes" class="btn btn-primary" />
                 <a asp-action="Index" class="btn btn-outline-primary">
                     <i class="fa fa-chevron-left" aria-hidden="true"></i> Back to List
                 </a>
