--- a/leave-management/Views/LeaveTypes/Index.cshtml
+++ b/leave-management/Views/LeaveTypes/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Leave Types</h1>
 <hr />
 <p>
-    <a asp-action="Create" class="btn btn-success"> <i class="fa fa-plus" aria-hidden="true"></i> Create New</a>
+    <a asp-action="Create" class="btn btn-primary"> <i class="fa fa-plus" aria-hidden="true"></i> Create New</a>
 </p>
 <table id="tblData" class="table">
     <thead>
