--- a/leave-management/Views/LeaveRequest/Create.cshtml
+++ b/leave-management/Views/LeaveRequest/Create.cshtml
@@ -8,7 +8,7 @@
 
 <hr />
 <div class="row">
-    <div class="col-md-8">
+    <div class="col-md-12">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
@@ -32,6 +32,15 @@
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="form-group">
+                        <label asp-for="RequesterComment" class="control-label"></label>
+                        @Html.TextAreaFor(model => model.RequesterComment, new { @class="form-control" })
+                        <span asp-validation-for="RequesterComment" class="text-danger"></span>
+                    </div>
+                </div>
+            </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary btn-block" />
             </div>
@@ -40,7 +49,7 @@
 </div>
 
 <div>
-    <a asp-action="Index" class="btn btn-outline-primary">
+    <a asp-action="MyLeaves" asp-controller="LeaveRequest" class="btn btn-outline-primary">
         <i class="fa fa-chevron-left" aria-hidden="true"></i> Back to List
     </a>
 </div>
