--- a/leave-management/Views/LeaveRequest/Details.cshtml
+++ b/leave-management/Views/LeaveRequest/Details.cshtml
@@ -9,32 +9,67 @@
 <h4>@Html.DisplayNameFor(model => model.DateRequested) -  @Html.DisplayFor(model => model.DateRequested)</h4>
 <hr />
 <h4>Type - @Html.DisplayFor(model => model.LeaveType.Name)</h4>
+<hr />
+@if (Model.Approved == null)
+{
+    <div class="alert alert-warning">
+        <p><strong>Pending Approval</strong></p>
+    </div>
+}
+else
+{
+    if (Model.Approved == true)
+    {
+        <div class="alert alert-success">
+            <p>
+                <strong>Approved by @Model.ApprovedBy.FirstName @Model.ApprovedBy.LastName on @Model.DateActioned</strong>
+            </p>
+        </div>
+    }
+    else
+    {
+        <div class="alert alert-danger">
+            <p>
+                <strong>Rejected by @Model.ApprovedBy.FirstName @Model.ApprovedBy.LastName on @Model.DateActioned</strong>
+            </p>
+        </div>
+    }
+}
 <div>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.StartDate)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.StartDate)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.EndDate)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.EndDate)
+        </dd>
+        <dd class="col-sm-2">
+            @Html.DisplayNameFor(model => model.RequesterComment)
+        </dd>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.RequesterComment)
         </dd>
     </dl>
 </div>
-<div>
-    <a class="btn btn-success" asp-action="ApproveRequest" asp-route-id="@Model.Id">
-        <i class="fa fa-check" aria-hidden="true"></i> Approve
-    </a>
-    <a class="btn btn-danger" asp-action="RejectRequest" asp-route-id="@Model.Id">
-        <i class="fa fa-remove" aria-hidden="true"></i> Reject
-    </a>
-</div>
-<br/>
+@if (Model.Approved == null || Model.Cancelled == false)
+{
+    <div>
+        <a class="btn btn-success" asp-action="ApproveRequest" asp-route-id="@Model.Id">
+            <i class="fa fa-check" aria-hidden="true"></i> Approve
+        </a>
+        <a class="btn btn-danger" asp-action="RejectRequest" asp-route-id="@Model.Id">
+            <i class="fa fa-remove" aria-hidden="true"></i> Reject
+        </a>
+    </div>
+    <br />
+}
 <div>
     <a asp-action="Index" class="btn btn-outline-primary">
         <i class="fa fa-chevron-left" aria-hidden="true"></i> Back to List
