--- a/leave-management/Views/Shared/_Layout.cshtml
+++ b/leave-management/Views/Shared/_Layout.cshtml
@@ -32,11 +32,15 @@
                         </li>
                         @if (SignInManager.IsSignedIn(User))
                         {
-
+                            if (User.IsInRole("Employee"))
+                            {
                             <li class="nav-item">
                                 <a class="nav-link text-white" asp-controller="LeaveRequest" asp-action="Create">Apply For Leave</a>
                             </li>
-
+                            <li class="nav-item">
+                                <a class="nav-link text-white" asp-controller="LeaveRequest" asp-action="MyLeaves">My Leave Requests</a>
+                            </li>
+                            }
                             if (User.IsInRole("Administrator"))
                             {
                                 <li class="nav-item dropdown">
