--- a/leave-management/Views/LeaveAllocation/Index.cshtml
+++ b/leave-management/Views/LeaveAllocation/Index.cshtml
@@ -20,8 +20,8 @@
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
-                <a asp-action="SetLeave" asp-route-id="@item.Id" class="btn btn-outline-primary">
-                    <i class="fa fa-address-card" aria-hidden="true"></i> Allocate To Employees
+                <a asp-action="SetLeave" asp-route-id="@item.Id" class="btn btn-outline-dark">
+                    <i class="fas fa-user-edit" aria-hidden="true"></i> Allocate To Employees
                 </a>
             </td>
         </tr>
