--- a/leave-management/Views/LeaveAllocation/ListEmployees.cshtml
+++ b/leave-management/Views/LeaveAllocation/ListEmployees.cshtml
@@ -38,7 +38,7 @@
                 @Html.DisplayFor(modelItem => item.Email)
             </td>
             <td>
-                <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-outline-primary">
+                <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-outline-dark">
                     <i class="fa fa-search" aria-hidden="true"></i> View Details
                 </a>
             </td>
