--- a/leave-management/Views/LeaveRequest/Create.cshtml
+++ b/leave-management/Views/LeaveRequest/Create.cshtml
@@ -49,7 +49,7 @@
 </div>
 
 <div>
-    <a asp-action="MyLeaves" asp-controller="LeaveRequest" class="btn btn-outline-primary">
+    <a asp-action="MyLeaves" asp-controller="LeaveRequest" class="btn btn-outline-dark">
         <i class="fa fa-chevron-left" aria-hidden="true"></i> Back to List
     </a>
 </div>
