--- a/leave-management/Views/LeaveAllocation/Edit.cshtml
+++ b/leave-management/Views/LeaveAllocation/Edit.cshtml
@@ -22,14 +22,14 @@
                 <span asp-validation-for="NumberOfDays" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-success" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index" class="btn btn-outline-primary">
+    <a asp-action="Index" class="btn btn-outline-dark">
         <i class="fa fa-chevron-left" aria-hidden="true"></i> Back to List
     </a>
 </div>
