--- a/leave-management/Views/LeaveRequest/Details.cshtml
+++ b/leave-management/Views/LeaveRequest/Details.cshtml
@@ -71,7 +71,7 @@ else
     <br />
 }
 <div>
-    <a asp-action="Index" class="btn btn-outline-primary">
+    <a asp-action="Index" class="btn btn-outline-dark">
         <i class="fa fa-chevron-left" aria-hidden="true"></i> Back to List
     </a>
 </div>
