--- a/leave-management/Views/LeaveTypes/Details.cshtml
+++ b/leave-management/Views/LeaveTypes/Details.cshtml
@@ -25,9 +25,9 @@
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-warning">
-        <i class="fa fa-pencil" aria-hidden="true"></i>
+        <i class="fas fa-pencil-alt" aria-hidden="true"></i>
     </a> |
-    <a asp-action="Index" class="btn btn-outline-primary">
+    <a asp-action="Index" class="btn btn-outline-dark">
         <i class="fa fa-chevron-left" aria-hidden="true"></i> Back to List
     </a>
 </div>
