--- a/leave-management/Views/LeaveTypes/Edit.cshtml
+++ b/leave-management/Views/LeaveTypes/Edit.cshtml
@@ -20,12 +20,12 @@
             </div>
             <div class="form-group">
                 <label asp-for="DefaultDays" class="control-label"></label>
-                <input asp-for="DefaultDays" class="control-label" />
+                <input asp-for="DefaultDays" class="form-control" />
                 <span asp-validation-for="DefaultDays" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save Changes" class="btn btn-primary" />
-                <a asp-action="Index" class="btn btn-outline-primary">
+                <input type="submit" value="Save Changes" class="btn btn-dark" />
+                <a asp-action="Index" class="btn btn-outline-dark">
                     <i class="fa fa-chevron-left" aria-hidden="true"></i> Back to List
                 </a>
             </div>
