--- a/leave-management/Views/LeaveTypes/Index.cshtml
+++ b/leave-management/Views/LeaveTypes/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Leave Types</h1>
 <hr />
 <p>
-    <a asp-action="Create" class="btn btn-primary"> <i class="fa fa-plus" aria-hidden="true"></i> Create New</a>
+    <a asp-action="Create" class="btn btn-dark"> <i class="fa fa-plus" aria-hidden="true"></i> Create New</a>
 </p>
 <table id="tblData" class="table">
     <thead>
@@ -32,13 +32,13 @@
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-warning"> 
-                    <i class="fa fa-pencil" aria-hidden="true"></i>
+                    <i class="fas fa-pencil-alt" aria-hidden="true"></i>
                 </a> |
                 <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-info"> 
-                    <i class="fa fa-info" aria-hidden="true"></i> 
+                    <i class="fas fa-info-circle" aria-hidden="true"></i> 
                 </a> |
                 <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this record?')"> 
-                    <i class="fa fa-trash" aria-hidden="true"></i>
+                    <i class="fas fa-trash-alt" aria-hidden="true"></i>
                 </a>
             </td>
         </tr>
