--- a/leave-management/Views/Shared/_LoginPartial.cshtml
+++ b/leave-management/Views/Shared/_LoginPartial.cshtml
@@ -16,7 +16,7 @@
     </li>
     <li class="nav-item">
         <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-            <button  type="submit" class="nav-link btn btn-link text-white">
+            <button  type="submit" class="nav-link btn btn-link">
                 <i class="fas fa-sign-out-alt"></i>
                 <p>
                     Logout
